Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -180,6 +180,10 @@ footer {
 	  	background-position: center top;
 		background-attachment: fixed;
 		z-index: 1;
+		-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
+		mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
+		border: none;
+		overflow-y: scroll;
 		}
 	section {
 		position: static;
@@ -198,10 +202,6 @@ footer {
 		top: auto;
 		margin: 5px 30px 50px 30px;
 		padding: 0px;
-		-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
-		mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
-		border: none;
-		overflow-y: scroll;
 		}
 	.menu {
 		width: auto;
@@ -209,8 +209,6 @@ footer {
 		top: auto;
 		margin: 5px 30px;
 		padding: 0px;
-		-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
-		mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
 		border: none;
 		}
 	footer {
